[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Fonts/Kenney Thick.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/gui/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/Icons/return.png" type="Texture" id=3]
[ext_resource path="res://assets/Fonts/Kenney Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Icons/menuList.png" type="Texture" id=5]
[ext_resource path="res://assets/Icons/menuGrid.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 4
border_width_top = 6
border_width_right = 6
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 16.0 ],
"_edit_vertical_guides_": [ 640.437 ]
}
main_menu = "res://game/gui/menus/MainMenu.tscn"
level_selection_menu = "res://game/gui/menus/LevelSelection.tscn"

[node name="BtnRetry" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -637.064
margin_top = -61.7072
margin_right = -577.064
margin_bottom = -1.70715
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMenu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -573.064
margin_top = -61.7072
margin_right = -513.064
margin_bottom = -1.70715
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSelection" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -509.064
margin_top = -61.7072
margin_right = -449.064
margin_bottom = -1.70715
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 26.7331
margin_right = 150.0
margin_bottom = 56.7331
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 4 )
text = "Level20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BtnRetry" to="." method="_on_BtnRetry_pressed"]
[connection signal="pressed" from="BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="BtnSelection" to="." method="_on_BtnSelection_pressed"]
